IK constraint desactivation does not work as expected #37894

Closed
opened 2013-12-20 11:31:09 +01:00 by Séverin Lemaignan · 8 comments

We control armatures (BL_ArmatureObject) in the GameEngine both via its channels (directly setting rotations on bones) and via IK targets (through a BL_ArmatureConstraint of type CONSTRAINT_TYPE_KINEMATIC + CONSTRAINT_IK_COPYPOSE.

Without adding the IK constraint, the control of the armature via channels works well. As soon as the constraint is added (and EVEN with BL_ArmatureConstraint.active = False), it becomes impossible to control the armature via channels.

This issue may be related to issue #37892

We control armatures (BL_ArmatureObject) in the GameEngine both via its channels (directly setting rotations on bones) and via IK targets (through a BL_ArmatureConstraint of type CONSTRAINT_TYPE_KINEMATIC + CONSTRAINT_IK_COPYPOSE. Without adding the IK constraint, the control of the armature via channels works well. As soon as the constraint is added (and EVEN with BL_ArmatureConstraint.active = False), it becomes impossible to control the armature via channels. This issue may be related to issue #37892

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @skadge

Added subscriber: @skadge

After further investigation, this issue occurs only with the iTaSC IK solver. @BenoitBolsee, could you have a look?

After further investigation, this issue occurs only with the iTaSC IK solver. @BenoitBolsee, could you have a look?

Bug found:
At [line 384 of itasc_solver.cpp ]], a check must be added for CONSTRAINT_OFF besides CONSTRAINT_DISABLE (similar to what is done in [ http:*developer.blender.org/diffusion/B/browse/master/source/blender/ikplugin/intern/iksolver_plugin.c;48b96805789958318938f9032ae89d1f947c2811$73 | iksolver_plugin.c ).

Bug found: At [line 384 of `itasc_solver.cpp` ]], a check must be added for `CONSTRAINT_OFF` besides `CONSTRAINT_DISABLE` (similar to what is done in [[ http:*developer.blender.org/diffusion/B/browse/master/source/blender/ikplugin/intern/iksolver_plugin.c;48b96805789958318938f9032ae89d1f947c2811$73 | `iksolver_plugin.c` ](http:*developer.blender.org/diffusion/B/browse/master/source/blender/ikplugin/intern/itasc_plugin.cpp;48b96805789958318938f9032ae89d1f947c2811$384)).
Benoit Bolsee was assigned by Dalai Felinto 2014-01-14 17:46:50 +01:00

Added subscribers: @BenoitBolsee, @dfelinto

Added subscribers: @BenoitBolsee, @dfelinto

pushed the suggested fix at 8a8ee2c
Thanks for the contribution (you may want to send a patch next time, if you know how to do it)

@BenoitBolsee you may want to review it, though it seems correct

pushed the suggested fix at 8a8ee2c Thanks for the contribution (you may want to send a patch next time, if you know how to do it) @BenoitBolsee you may want to review it, though it seems correct

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

closing the task

closing the task
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37894
No description provided.