fix #T37894: IK constraint desactivation does not work as expected

patch suggested by Séverin Lemaignan (skadge)